[gd_scene load_steps=11 format=3 uid="uid://leie40pfhrf0"]

[ext_resource type="Texture2D" uid="uid://bh6twmfm5x7e4" path="res://ART/characters/Spaceship.png" id="1_0y4x1"]
[ext_resource type="Script" path="res://SCRIPTS/level_scripts/main_menu.gd" id="1_7mwkp"]
[ext_resource type="Texture2D" uid="uid://cgif0r2275ntn" path="res://ART/icons_ui/StarsBackground.png" id="2_1v814"]
[ext_resource type="Shader" path="res://RESOURCES/SHADERS/star_glow_shader.gdshader" id="2_u5ynf"]
[ext_resource type="FontFile" uid="uid://chr7wxsqgcd3h" path="res://ART/font/PressStart2P-Regular.ttf" id="3_6er0p"]
[ext_resource type="Theme" uid="uid://cxwwvxki6fpue" path="res://RESOURCES/UI_RESOURCES/main_theme.tres" id="3_s157w"]
[ext_resource type="StyleBox" uid="uid://rk5cwdl4amm4" path="res://RESOURCES/UI_RESOURCES/tooltip_pressed_style_box.tres" id="7_38vuh"]
[ext_resource type="StyleBox" uid="uid://dgllh7j7nqb8t" path="res://RESOURCES/UI_RESOURCES/tooltip_normal_style_box.tres" id="8_fk3g5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ujtnl"]
shader = ExtResource("2_u5ynf")
shader_parameter/speed = 2.0
shader_parameter/intensity = 0.05
shader_parameter/randomness = 10.0
shader_parameter/active = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kx2nk"]
bg_color = Color(0.162066, 0.162066, 0.162066, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.8, 0.8, 0.8, 1)
shadow_size = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7mwkp")

[node name="Background" type="Node2D" parent="."]

[node name="SpaceSprite" type="Sprite2D" parent="Background"]
material = SubResource("ShaderMaterial_ujtnl")
texture = ExtResource("2_1v814")
centered = false
metadata/_edit_lock_ = true

[node name="ShipSprite" type="Sprite2D" parent="Background"]
position = Vector2(640, 430)
scale = Vector2(2, 2)
texture = ExtResource("1_0y4x1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.0
offset_top = -175.0
offset_right = 184.0
offset_bottom = -78.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Title"]
layout_mode = 2
theme = ExtResource("3_s157w")
theme_override_font_sizes/font_size = 44
text = "nothing like getting lost in"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Title"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("3_6er0p")
theme_override_font_sizes/font_size = 48
text = "SPACE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Left" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -664.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="LeftMenu" type="VBoxContainer" parent="CanvasLayer/Left"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -111.5
offset_right = -70.0
offset_bottom = 111.5
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Play" type="Button" parent="CanvasLayer/Left/LeftMenu"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("3_s157w")
keep_pressed_outside = true
text = "Play"

[node name="Options" type="Button" parent="CanvasLayer/Left/LeftMenu"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("3_s157w")
keep_pressed_outside = true
text = "Options
"

[node name="Quit" type="Button" parent="CanvasLayer/Left/LeftMenu"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("3_s157w")
keep_pressed_outside = true
text = "Quit"

[node name="Right" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 664.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="RightMenu" type="VBoxContainer" parent="CanvasLayer/Right"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 70.0
offset_top = -111.5
offset_right = 300.0
offset_bottom = 111.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Play" type="Button" parent="CanvasLayer/Right/RightMenu"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("3_s157w")
keep_pressed_outside = true
text = "Play"

[node name="Options" type="Button" parent="CanvasLayer/Right/RightMenu"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("3_s157w")
keep_pressed_outside = true
text = "Options
"

[node name="Quit" type="Button" parent="CanvasLayer/Right/RightMenu"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("3_s157w")
keep_pressed_outside = true
text = "Quit"

[node name="OptionsMenu" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 710.0
offset_top = -190.0
offset_right = 960.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Master" type="Label" parent="CanvasLayer/OptionsMenu"]
layout_mode = 2
theme = ExtResource("3_s157w")
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master_Scroll" type="HScrollBar" parent="CanvasLayer/OptionsMenu"]
custom_minimum_size = Vector2(250, 12)
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
theme = ExtResource("3_s157w")
max_value = 1.0
step = 0.001
value = 1.0

[node name="Music" type="Label" parent="CanvasLayer/OptionsMenu"]
layout_mode = 2
theme = ExtResource("3_s157w")
text = "Music"
horizontal_alignment = 1

[node name="Music_Scroll" type="HScrollBar" parent="CanvasLayer/OptionsMenu"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_s157w")
max_value = 1.0
step = 0.001
value = 1.0

[node name="SFX" type="Label" parent="CanvasLayer/OptionsMenu"]
layout_mode = 2
theme = ExtResource("3_s157w")
text = "Effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX_Scroll" type="HScrollBar" parent="CanvasLayer/OptionsMenu"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_s157w")
max_value = 1.0
step = 0.001
value = 1.0

[node name="TooltipButton" type="Button" parent="CanvasLayer/OptionsMenu"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_s157w")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_kx2nk")
theme_override_styles/pressed = ExtResource("7_38vuh")
theme_override_styles/normal = ExtResource("8_fk3g5")
toggle_mode = true
action_mode = 0
text = "Tooltip OFF"

[connection signal="mouse_entered" from="CanvasLayer/Left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Left" to="." method="_on_left_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Left/LeftMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Left/LeftMenu/Options" to="." method="_on_left_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Left/LeftMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Right" to="." method="_on_right_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Right/RightMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Right/RightMenu/Options" to="." method="_on_right_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Right/RightMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="CanvasLayer/OptionsMenu/Master_Scroll" to="." method="_on_master_scroll_value_changed"]
[connection signal="value_changed" from="CanvasLayer/OptionsMenu/Music_Scroll" to="." method="_on_music_scroll_value_changed"]
[connection signal="value_changed" from="CanvasLayer/OptionsMenu/SFX_Scroll" to="." method="_on_sfx_scroll_value_changed"]
[connection signal="pressed" from="CanvasLayer/OptionsMenu/TooltipButton" to="." method="_on_tooltip_button_pressed"]
